# UlamSpiral

./: .gitignore  Makefile  UlamSpiral.cabal  UlamSpiral.hs  flake.nix
fonts/: ttf2svg.sh
nix/: default.nix  overlay.nix  shell.nix
